// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-2-menu"
            role="combobox"
          >
            <label
              for="downshift-2-input"
              id="downshift-2-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 bPzSMW"
              disabled=""
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700 ring-theme-background"
              />
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-2-menu"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                  data-testid="SelectDropdownInput__input"
                  disabled=""
                  id="downshift-2-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-2-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-2-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-0-menu"
            role="combobox"
          >
            <label
              for="downshift-0-input"
              id="downshift-0-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700 ring-theme-background"
              />
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-0-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-0-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-0-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 iXDeQC sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-invalid="true"
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdfBwQ iyevwF text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  alert-warning.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-4-menu"
            role="combobox"
          >
            <label
              for="downshift-4-input"
              id="downshift-4-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700 ring-theme-background"
              />
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-4-menu"
                  aria-labelledby="downshift-4-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-4-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-4-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-4-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render with preselected address 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-6-menu"
            role="combobox"
          >
            <label
              for="downshift-6-input"
              id="downshift-6-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700 ring-theme-background"
              />
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-6-menu"
                  aria-labelledby="downshift-6-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-6-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-6-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-6-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 hDeOGV sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-8-menu"
            role="combobox"
          >
            <label
              for="downshift-8-input"
              id="downshift-8-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                    title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                  />
                </div>
              </div>
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-8-menu"
                  aria-labelledby="downshift-8-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-8-input"
                  placeholder="Select option"
                  value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-8-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-8-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
